fix overflow on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -160,24 +160,80 @@ header {
 }
 
 @media (max-width: 991px) {
+    .navbar-brand {
+        float: none;
+    }
+    .navbar-nav .nav-link {
+        padding-right: 0;
+        padding-left: 35%;
+    }
+    .pageContentWrapper {
+        padding-right: 0px;
+        padding-left: 0px;
+    }
+    .cta {
+        padding: 0rem;
+    }
+    .carousel-item {
+        height: 300px;
+    }
+    .carousel-item img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        min-height: 300px;
+        height: 300px;
+    }
+    .navbar {
+        padding: 1rem 1rem;
+    }
+    .footer-left,
+    .footer-right {
+        text-align: center;
+    }
+    .footer-logo {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    footer {
+        font-size: 10px;
+    }
     .product-item-img {
         width: 98%;
     }
     .product-item {
         width: 100%;
     }
+    .body-wrapper {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
     body {
-        padding-left: 10px;
-        padding-right: 10px;
-        max-width: 100%;
-        overflow-x: hidden;
         background-color: #F6F0E8;
+        padding: 0px;
+        margin: 0px;
     }
     footer {
+        padding-right: 0px !important;
+        padding-left: 0px !important;
+        padding-top: 40px;
+        padding-bottom: 30px;
+        margin-left: 0px !important;
+        margin-right: 0px !important;
+        margin-bottom: -50px;
+        padding-bottom: 50px;
         background-color: white;
     }
     header {
         background-color: white;
+        margin-left: 0px !important;
+        padding-left: 0px !important;
+        margin-right: 0px !important;
+        padding-right: 0px !important;
+        margin-top: -40px;
+        padding-top: 40px;
     }
     .navbar {
         background-color: white;
@@ -251,52 +307,6 @@ header {
     }
 }
 
-@media (max-width: 900px) {
-    .navbar-brand {
-        float: none;
-    }
-    .navbar-nav .nav-link {
-        padding-right: 0;
-        padding-left: 35%;
-    }
-    .pageContentWrapper {
-        padding-right: 0px;
-        padding-left: 0px;
-    }
-    .cta {
-        padding: 0rem;
-    }
-    .carousel-item {
-        height: 300px;
-    }
-    .carousel-item img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        min-height: 300px;
-        height: 300px;
-    }
-    .navbar {
-        padding: 1rem 1rem;
-    }
-    .footer-left,
-    .footer-right {
-        text-align: center;
-    }
-    .footer-logo {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    footer {
-        font-size: 10px;
-    }
-    body {
-        padding: 0px;
-        margin: 0px;
-    }
-}
-
 .pageContentWrapper {
     min-height: calc(100vh - 70px);
 }
@@ -330,25 +340,22 @@ footer {
 html {
     font-family: 'futura' !important;
     max-width: 100%;
-    overflow-x: hidden;
 }
 
 body {
-    /* background-image: url("https://images.pexels.com/photos/1631677/pexels-photo-1631677.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"); */
     font-family: 'futura' !important;
     background-color: #F6F0E8;
 }
 
 @media (min-width: 991px) {
     body {
-        /* background-image: url("https://images.pexels.com/photos/1631677/pexels-photo-1631677.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"); */
         background-color: #F6F0E8;
         font-family: 'futura' !important;
         background-attachment: fixed;
         background-position: center;
         background-size: cover;
         border: 1px solid transparent;
-        height: 100%;
+        height: auto;
         z-index: -100;
         width: 90%;
         margin: 0 auto;
@@ -445,19 +452,6 @@ p {
         bottom: -2rem;
     }
 }
-
-
-/* @media (min-width: 1200px) {
-    .intro .intro-text {
-        width: 45%;
-    }
-} */
-
-
-/* .cta {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-} */
 
 .cta .cta-inner {
     position: relative;
